--- a/css/layout.css
+++ b/css/layout.css
@@ -22,6 +22,39 @@
   clear: both;
 }
 
-/* Posititoning Classes */
+/* Positioning Classes */
 
+.col-1 {
+  float: left;
+  width: 32%;
+}
 
+.col-2 {
+  float: left;
+  width: 66%;
+}
+
+/* is col-3 necessary??? */
+.col-3 { /* entire width, or 100% */
+  background: #ccc;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin: 0%
+}
+
+.clear-fix:after {
+  content: ".";
+  clear: both;
+  display: block;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
