automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ iframe {
 		}
 
 		#logo h2 {
-			margin:0;
+			margin:10px;
 			display: inline-block;
 			font-family: 'Elsie Swash Caps', cursive;
 		}
