--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,13 @@ body {
 	background: url(../images/handmadepaper.png);
 }
 
-h2, h3 {
+h2 {
 	margin-bottom: 5px;
-  margin-top: 5px;
+  margin-top: 10px;
+}
+
+h3 {
+	margin-bottom: 5px;
 }
 
 ul, ol {
